<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="Player 1"
        android:key="@string/key_alias"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:dialogTitle="Introduce el alias"
        android:icon="@drawable/user"
        android:title="Alias" />

    <ListPreference
        android:defaultValue="8"
        android:entries="@array/medida"
        android:entryValues="@array/medida"
        android:key="@string/key_medida"
        android:dialogTitle="Selecciona la medida del tablero"
        android:icon="@drawable/parrilla"
        android:title="Medida tablero" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/key_control"
        android:icon="@drawable/tiempo"
        android:title="Control del tiempo" />

    <ListPreference
        android:defaultValue="Normal"
        android:entries="@array/dificultad"
        android:entryValues="@array/dificultad"
        android:key="@string/key_dificultad"
        android:dialogTitle="Selecciona la dificultad"
        android:icon="@drawable/dificultad"
        android:title="Dificultad" />
</PreferenceScreen>