<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ayuda1"
                android:textColor="@color/black"
                android:textSize="@dimen/textTitleSize"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ayuda2"
                android:textColor="@color/black"
                android:textSize="@dimen/textContentSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/element_horizontal_margin"
                android:text="@string/ayuda3"
                android:textColor="@color/black"
                android:textSize="@dimen/textTitleSize"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/ayuda4"
                android:textColor="@color/black"
                android:textSize="@dimen/textContentSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/element_horizontal_margin"
                android:text="@string/ayuda5"
                android:textColor="@color/black"
                android:textSize="@dimen/textTitleSize"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/ayuda6"
                android:textColor="@color/black"
                android:textSize="@dimen/textContentSize" />

            <ImageView
                android:layout_width="@dimen/imageSize"
                android:layout_height="@dimen/imageSize"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/element_horizontal_margin"
                android:src="@drawable/ayuda_image" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ayuda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/element_horizontal_margin"
            android:layout_marginTop="@dimen/element_horizontal_margin"
            android:background="@drawable/shape_grid"
            android:onClick="volver"
            android:paddingEnd="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_vertical_margin"
            android:text="@string/volver"
            android:textColor="@color/white"
            android:textSize="@dimen/buttonTextSize" />

    </LinearLayout>
</RelativeLayout>