<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <Button
        android:layout_centerHorizontal="true"
        android:text="@string/ayuda"
        android:id="@+id/ayuda"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:onClick="muestraAyuda"/>

    <Button
        android:layout_below="@+id/ayuda"
        android:layout_centerHorizontal="true"
        android:text="@string/comenzar_partida"
        android:id="@+id/comenzar"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:onClick="muestraConfiguracion"/>

    <Button
        android:layout_below="@+id/comenzar"
        android:layout_centerHorizontal="true"
        android:text="@string/salir"
        android:id="@+id/salir"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:onClick="salir"/>
</RelativeLayout>
